# lektor-markdown-header-anchors

./: .gitignore  .travis.yml  CHANGES.md  README.md  appveyor.yml  lektor_markdown_header_anchors.py  noxfile.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml
tests/: conftest.py  test_plugin.py
tests/demo-project-random/configs/: markdown-header-anchors.ini
