[project]
name = "lektor-markdown-header-anchors"
version = "0.4.0"
description = "Lektor plugin that adds anchors and table of contents to markdown headers."
authors = [{name = "Armin Ronacher", email = "armin.ronacher@active-4.com"}]
keywords = [
  "Lektor plugin", "markdown", "static-site",
  "blog", "toc", "table-of-contents", "anchors", "headers",
]
license = "BSD-3-Clause"
readme = "README.md"
urls.homepage = "http://github.com/lektor/lektor-markdown-header-anchors"
classifiers = [
  "Environment :: Plugins",
  "Environment :: Web Environment",
  "Framework :: Lektor",
  "Intended Audience :: Developers",
]
requires-python = ">= 3.10"

[project.entry-points."lektor.plugins"]
markdown-header-anchors = "lektor_markdown_header_anchors:MarkdownHeaderAnchorsPlugin"

[build-system]
# When installed in editable mode, setuptools installs a .pkg-info in site-packages,
# but also leaves an .egg-info in the project directory.
# This results in importlib.metadata.distributions() listing the distribution twice,
# which can cause Lektor to fail with:
#
#   RuntimeError: Plugin "markdown-header-anchors" is already registered
#
# Refs:
# https://github.com/python/importlib_metadata/issues/481
# https://github.com/pypa/setuptools/issues/3649
#
# So, here, we use hatchling which does not leave an .egg-info lying around
requires = ["hatchling >= 1.28.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "lektor>=3.3.13b1",
    "pytest",
]
